--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,21 +78,35 @@ section {
 
 .hero {
     background-image: url("../images/hero-bg.jpeg");
-    height: 600px;
     background-size: cover;
     background-position: center;
-    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.hero-cta {
+    width: 35%;
+    text-align: right;
+    margin: 3.5%;
+    color: #fff;
+    font-size: 18px;
+    line-height: 1.3;
+}
+
+.hero-cta h2 {
+    font-style: italic;
+    font-size: 55px;
+    color: #fce138;
 }
 
 .hero-form {
-    position: absolute;
-    bottom: 120px;
-    right: 140px;
     color: #024e76;
     background-color: #fce138;
     padding: 20px;
-    width: 500px; 
-    border: solid 3px #024e76;  
+    border: solid 3px #024e76;
+    width: 40%;  
+    margin: 3.5%;
 }
 
 .hero-form h3 {
