--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,14 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    background-image: url("../images/hero-bg.jpeg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 
 header h1 {
@@ -23,6 +31,7 @@ header h1 {
     font-size: 36px;
     color: #fce138;
     margin: 0;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 header a {
@@ -46,8 +55,16 @@ header nav ul li a {
     padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
+header nav ul li a:hover {
+    background: #fce138;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
+  }
+  
 footer {
     background: #fce138;
     width: 100%;
@@ -84,6 +101,8 @@ section {
     justify-content: center;
     flex-wrap: wrap;
     align-items: flex-start;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 
 .hero-cta {
@@ -99,15 +118,18 @@ section {
     font-style: italic;
     font-size: 55px;
     color: #fce138;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .hero-form {
     color: #024e76;
-    background-color: #fce138;
+    background-color: rgba(252, 225, 56, .8);
     padding: 20px;
     border: solid 3px #024e76;
     width: 40%;  
     margin: 3.5%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 15px;
 }
 
 .hero-form h3 {
@@ -126,7 +148,14 @@ section {
     width: 100%;
     margin-bottom: 15px;
     padding: 7px 15px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
 }
+
+.form-input:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
+  }
 
 .hero-form label {
     margin: 0 5px;
@@ -138,7 +167,12 @@ section {
     padding: 10px 20px;
     border: none;
     font-size: 16px;
+    border-radius: 10px;
 }
+
+.hero-form button:hover {
+    background-color: #39a6b2;  
+  }
 
 .section-title {
     font-size: 48px;
@@ -175,12 +209,15 @@ section {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
-    border-bottom: 1px solid #39a6b2;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
 }
+.step:not(:last-child) {
+    border-bottom: 1px solid #39a6b2;
+  }
+
 .step h3 {
     color: #024e76;
     font-size: 46px;
@@ -308,6 +345,13 @@ section {
     width: 100%;
     margin-bottom: 15px;
     margin-top: 5px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
+}
+
+.contact-form input:focus, .contact-form textarea:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
   }
 
 .contact-form button {
@@ -318,7 +362,14 @@ section {
     text-align: center;
     padding: 15px 0;
     font-size: 16px;
+    border-radius: 10px;
 }
+
+.contact-form button:hover {
+    color: #fce138;
+    background: #39a6b2;
+  }
+
 /* UTILITIES */
 .text-left {
   text-align: left;
@@ -338,6 +389,7 @@ section {
         header {
           padding-bottom: 0;
           justify-content: center;
+          position: relative;
         }
       
         header h1 {
